<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                 xmlns:app="http://schemas.android.com/apk/res-auto"
                                                 xmlns:tools="http://schemas.android.com/tools"
                                                 xmlns:card_view="http://schemas.android.com/apk/res-auto"
                                                 android:id="@+id/coordinatorLayout"
                                                 android:layout_width="match_parent"
                                                 android:layout_height="match_parent"
                                                 android:animateLayoutChanges="true">

    <android.support.design.widget.AppBarLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay"
            app:elevation="5dp">

        <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="?attr/colorPrimary"
                app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

            <android.support.v7.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    card_view:cardElevation="@dimen/flight_card_view_elevation"
                    card_view:cardUseCompatPadding="true"
                    android:theme="@style/CardView.Light"
                    android:layout_marginLeft="@dimen/flight_card_view_margin_left"
                    android:layout_marginRight="@dimen/flight_card_view_margin_right"
                    card_view:cardBackgroundColor="@color/white"
                    android:layout_marginStart="@dimen/flight_card_view_margin_left"
                    android:layout_marginEnd="@dimen/flight_card_view_margin_right">

                <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:padding="@dimen/flight_card_view_inside_padding"
                        android:orientation="vertical">

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="@dimen/airport_from_to_height"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:id="@+id/layout_origin_airport"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:orientation="vertical">

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textAllCaps="true"
                                    android:text="@string/origin"/>

                            <TextView
                                    android:id="@+id/tv_origin_airport"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:gravity="center"
                                    android:textSize="@dimen/font_size_27sp"
                                    android:text="@string/default_from_airport"/>

                            <TextView
                                    android:id="@+id/tv_origin_airport_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textAllCaps="true"/>

                        </LinearLayout>

                        <LinearLayout
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:gravity="center_horizontal|center_vertical"
                                android:layout_weight="0.2">

                            <ImageView
                                    android:id="@+id/swap_destinations"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:src="@drawable/ic_compare_arrows_black_24dp"/>

                        </LinearLayout>

                        <LinearLayout
                                android:id="@+id/layout_destination_airport"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:orientation="vertical"
                                android:layout_weight="1">

                            <TextView
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textAllCaps="true"
                                    android:text="@string/destination"/>

                            <TextView
                                    android:id="@+id/tv_destination_airport"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:textStyle="bold"
                                    android:gravity="center"
                                    android:textSize="@dimen/font_size_27sp"
                                    android:text="@string/default_to_airport"/>

                            <TextView
                                    android:id="@+id/tv_destination_airport_name"
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:gravity="center"
                                    android:textAllCaps="true"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="55dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:id="@+id/depart_layout"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginRight="5dp"
                                android:padding="3dp"
                                android:gravity="center_vertical|center_horizontal"
                                android:orientation="vertical"
                                android:background="@drawable/background_with_faint_corners"
                                android:layout_marginEnd="5dp">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center_horizontal|center_vertical">

                                <ImageView
                                        android:layout_width="13dp"
                                        android:layout_height="13dp"
                                        android:src="@drawable/ic_date_range_black_24dp"/>

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/depart"
                                        android:textStyle="bold"
                                        android:paddingLeft="4dp"
                                        android:textSize="16sp"
                                        android:paddingStart="4dp"/>

                            </LinearLayout>

                            <TextView
                                    android:id="@+id/depart_date_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/no_date_selected"
                                    android:textSize="13sp"/>

                        </LinearLayout>

                        <LinearLayout
                                android:id="@+id/return_layout"
                                android:layout_width="0dp"
                                android:layout_height="match_parent"
                                android:layout_weight="1"
                                android:layout_marginLeft="5dp"
                                android:padding="3dp"
                                android:gravity="center_vertical|center_horizontal"
                                android:orientation="vertical"
                                android:background="@drawable/background_with_faint_corners"
                                android:layout_marginStart="5dp">

                            <LinearLayout
                                    android:layout_width="match_parent"
                                    android:layout_height="wrap_content"
                                    android:orientation="horizontal"
                                    android:gravity="center_horizontal|center_vertical">

                                <ImageView
                                        android:layout_width="13dp"
                                        android:layout_height="13dp"
                                        android:src="@drawable/ic_date_range_black_24dp"/>

                                <TextView
                                        android:layout_width="wrap_content"
                                        android:layout_height="wrap_content"
                                        android:text="@string/return_label"
                                        android:textStyle="bold"
                                        android:paddingLeft="4dp"
                                        android:textSize="16sp"
                                        android:paddingStart="4dp"/>

                            </LinearLayout>

                            <TextView
                                    android:id="@+id/return_date_tv"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/no_date_selected"
                                    android:textSize="13sp"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="40dp"
                            android:layout_marginTop="10dp"
                            android:layout_marginLeft="1dp"
                            android:layout_marginRight="1dp"
                            android:orientation="horizontal">

                        <LinearLayout
                                android:id="@+id/passengers_and_class_layout"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:gravity="center"
                                android:background="@drawable/background_with_faint_corners">

                            <TextView
                                    android:id="@+id/passengers_and_class_summary"
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/passenger_class_hint"/>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginTop="10dp"
                            android:layout_marginBottom="-3dp">

                        <android.support.v7.widget.AppCompatButton
                                android:id="@+id/search_flights_button"
                                android:layout_width="match_parent"
                                android:layout_height="55dp"
                                style="@style/Widget.AppCompat.Button.Colored"
                                android:textStyle="bold"
                                android:layout_marginLeft="-3dp"
                                android:layout_marginRight="-3dp"
                                android:textColor="@color/white"
                                android:text="@string/search_flights"/>

                    </LinearLayout>

                </LinearLayout>

            </android.support.v7.widget.CardView>

            <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    app:layout_behavior="@string/appbar_scrolling_view_behavior">

                <ProgressBar
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/pb_loading_schedules"
                        android:visibility="gone"
                        android:layout_centerInParent="true"/>

                <android.support.v7.widget.RecyclerView
                        android:id="@+id/rv_schedules"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:scrollbars="vertical"
                        android:clickable="true"
                        android:focusable="true"/>

            </RelativeLayout>

        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>